--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,88 @@
 <!-- templates/index.html -->
 <html>
   <head>
-    <title>Flask Shop</title>
+    <title>Sales Prediction for Pharmaceutical Store</title>
+    <!-- <link rel="stylesheet" href="../templates/css/style.css" /> -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static',filename='css/style.css') }}"
+    />
   </head>
   <body>
     <h1>{{message}}</h1>
+    <div class="container">
+      <div class="c1">
+        <div class="c11">
+          <h1 class="mainhead">PICK YOUR SPOT</h1>
+          <p class="mainp">
+            Just click the buttons below to toggle between SignIn & SignUp
+          </p>
+        </div>
+        <div id="left">
+          <h1 class="s1class"><span>SIGN</span><span class="su">IN</span></h1>
+        </div>
+        <div id="right">
+          <h1 class="s2class"><span>SIGN</span><span class="su">UP</span></h1>
+        </div>
+      </div>
+      <div class="c2">
+        <form class="signup">
+          <h1 class="signup1">SIGN UP</h1>
+          <br /><br /><br /><br />
+          <input
+            name="username"
+            type="text"
+            placeholder="Username*"
+            class="username"
+          />
+
+          <input
+            name="email"
+            type="text"
+            placeholder="Email*"
+            class="username"
+          />
+
+          <input
+            name="password"
+            type="password"
+            placeholder="Password*"
+            class="username"
+          />
+
+          <button class="btn">Sign Up</button>
+        </form>
+        <form class="signin">
+          <h1 class="signup1">SIGN IN</h1>
+          <br /><br /><br /><br />
+          <input
+            name="username"
+            type="text"
+            placeholder="Username*"
+            class="username"
+          />
+
+          <input
+            name="password"
+            type="password"
+            placeholder="Password*"
+            class="username"
+          />
+
+          <button class="btn">Get Started</button>
+
+          <br /><br /><br /><br />
+          <a href=""><p class="signup2">Forget Password?</p></a>
+        </form>
+      </div>
+    </div>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+
+    <script src="{{ url_for('static',filename='js/main.js') }}"></script>
   </body>
 </html>
