--- a/templates/home.html
+++ b/templates/home.html
@@ -38,37 +38,9 @@
         </label>
       </ul>
     </div>
+
     <div class="content">
-      <div action="index.html" class="login-form-left">
-        <h1>Prediction Results</h1>
-      </div>
-
-      <form action="index.html" class="login-form">
-        <h1>Predict of Pharmaceutical Sales</h1>
-
-        <div class="txtb">
-          <input type="text" />
-          <span data-placeholder="Weekdays"></span>
-        </div>
-        <div class="txtb">
-          <select name="preparam" id="pred">
-            <option value="">Select Pred Param</option>
-            <option value="Weekdays">Weekdays</option>
-            <option value="Weekends">Weekdays</option>
-            <option value="Days">Days</option>
-            <option value="Month">Months</option>
-          </select>
-        </div>
-        <div class="txtb">
-          <input type="text" />
-          <span data-placeholder="Days from Now"></span>
-        </div>
-        <div class="txtb">
-          <input type="text" />
-          <span data-placeholder="Weekends"></span>
-        </div>
-        <input type="submit" class="logbtn" value="Predict" />
-      </form>
+      <h1>The Notebook and solved Problem To be Added as A blog</h1>
     </div>
 
     <script type="text/javascript">
