--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
       </div>
 
       <form action="index.html" class="login-form">
-        <h1>Predict of Pharmaceutical Sales</h1>
+        <h1>Prediction of Pharmaceutical Sales upto 6 Weeks a head!</h1>
 
         <div class="txtb">
           <input type="text" />
