--- a/static/css/style.css
+++ b/static/css/style.css
@@ -158,7 +158,7 @@ select {
 
 .txtb span::after {
   content: "";
-  position: absolute;
+  position: relative;
   width: 0%;
   height: 2px;
   background: linear-gradient(120deg, #3498db, #8e44ad);
@@ -191,4 +191,260 @@ select {
   margin-top: 60px;
   text-align: center;
   font-size: 13px;
+}
+
+img {
+  max-width: 100%;
+}
+#team {
+  padding: 25px 0;
+}
+
+#fun-fact,
+#team {
+  /* background: #f6f7fe; */
+  background-image: linear-gradient(120deg, #3498db, #8e44ad);
+}
+#team .team-section-text {
+  padding-top: 10px;
+  padding-left: 20px;
+}
+
+.section-count,
+.section-title {
+  font-family: "Josefin Sans", sans-serif;
+}
+.section-count {
+  height: 120px;
+  overflow: hidden;
+  font-weight: 100;
+}
+.section-count > span {
+  color: #3e4046;
+  display: block;
+  font-size: 220px;
+  line-height: 0.7em;
+}
+.section-title {
+  color: #3e6edf;
+  font-size: 48px;
+  font-weight: 300;
+  text-transform: capitalize;
+  margin-bottom: 20px;
+}
+.section-text > p {
+  margin-bottom: 15px;
+}
+
+#team {
+  padding: 150px 0;
+}
+
+#team .team-section-text {
+  padding-top: 30px;
+}
+
+#team .team-single {
+  border: 8px solid #e6e9f4;
+  margin: 0 auto;
+  padding: 15px;
+  width: 320px;
+  display: none;
+}
+
+#team .team-single.active {
+  display: block;
+}
+
+#team .team-list > ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#team .team-list > ul > li {
+  position: relative;
+  margin: 15px 0;
+}
+
+#team .team-list > ul > li:first-child {
+  margin-top: 70px;
+}
+
+#team .team-list > ul > li:last-child {
+  margin-bottom: 0;
+}
+
+#team .team-list > ul > li.active > a > figure:before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(131, 158, 226, 0.7);
+}
+
+#team .team-list > ul > li.active::after {
+  color: #3e6edf;
+  content: "";
+  font-family: fontawesome;
+  margin-top: -10px;
+  position: absolute;
+  right: 0;
+  top: 50%;
+}
+
+#team .team-list > ul > li > a > figure {
+  border-radius: 50%;
+  height: 100px;
+  overflow: hidden;
+  width: 100px;
+  position: relative;
+}
+
+#team .team-info > h4 {
+  color: yellow;
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 5px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+#team .team-img {
+  position: relative;
+}
+
+#team .team-img > img {
+  width: 100%;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+#team .team-social > ul {
+  bottom: 0;
+  list-style: none;
+  margin: 0 0 0 20px;
+  padding: 0;
+  position: absolute;
+  right: 30px;
+  opacity: 0;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#team .team-social > ul > li > a {
+  border-radius: 50%;
+  color: yellow;
+  display: block;
+  font-size: 18px;
+  height: 40px;
+  margin: 15px 5px;
+  padding: 8px;
+  position: relative;
+  text-align: center;
+  width: 40px;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+#team .team-social > ul > li > a:hover {
+  background: #3e6edf;
+  color: #fff;
+}
+
+#team .team-social > ul > li > a::after {
+  border: 1px solid #dee3f4;
+  border-radius: 50%;
+  content: "";
+  height: 50px;
+  left: -5px;
+  position: absolute;
+  top: -5px;
+  width: 50px;
+}
+
+#team .team-single:hover .team-img > img {
+  margin-left: -70px;
+}
+
+#team .team-single:hover .team-social > ul {
+  opacity: 1;
+  right: 0;
+}
+
+@media screen and (max-width: 1200px) {
+  #team {
+    padding: 20px 0;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  #team {
+    padding: 20px;
+  }
+  #team .col-md-5.col-sm-12.pull-right {
+    float: none !important;
+  }
+  #team .team-section-text {
+    padding-bottom: 50px;
+    padding-top: 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  #team {
+    padding: 20px;
+  }
+  #team .team-section-text {
+    padding-bottom: 30px;
+    padding-top: 0;
+  }
+  #team .team-single {
+    margin: 30px auto 0;
+    overflow: hidden;
+    padding: 10px;
+    width: 100%;
+  }
+  #team .team-list {
+    text-align: center;
+  }
+  #team .team-list > ul > li {
+    position: relative;
+  }
+  #team .team-list > ul > li > a > figure {
+    height: 65px;
+    position: relative;
+    width: 65px;
+  }
+  #team .team-list > ul > li.active::after {
+    margin-top: 10px;
+    position: absolute;
+    right: 30px !important;
+    top: 100%;
+    -webkit-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+  }
+  #team .team-list > ul > li {
+    display: inline-block;
+    margin: 15px 0;
+  }
+}
+@media screen and (max-width: 1200px) {
+  #team {
+    padding: 20px;
+  }
+}
+@media screen and (max-width: 991px) {
+  #team {
+    padding: 20px;
+  }
+  #team .team-section-text {
+    padding-bottom: 50px;
+    padding-top: 0;
+  }
 }
