some correction on title and style

--- a/templates/about.html
+++ b/templates/about.html
@@ -24,7 +24,13 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
       charset="utf-8"
     ></script>
+    <style>
+      .heading {
+        text-align: left;
 
+        margin-top: -50px;
+      }
+    </style>
     <!--  <script src="{{ url_for('static',filename='js/main.js') }}"></script> -->
   </head>
   <body>
@@ -46,8 +52,12 @@
       </ul>
     </div>
     <!-- START TEAM -->
+
     <section id="team">
       <div class="container">
+        <h1 class="heading">
+          TEAM THIMLICH OHINGA
+        </h1>
         <div class="row">
           <!-- END col-md-5 col-sm-12 pull-right-->
           <div class="col-md-7 col-sm-12">
