Styling and title correction of about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -26,7 +26,7 @@
     ></script>
     <style>
       .heading {
-        text-align: left;
+        text-align: center;
 
         margin-top: -50px;
       }
@@ -60,7 +60,7 @@
         </h1>
         <div class="row">
           <!-- END col-md-5 col-sm-12 pull-right-->
-          <div class="col-md-7 col-sm-12">
+          <div class="col-md-12 col-sm-12">
             <div class="row">
               <div class="col-md-5 col-sm-4">
                 <div class="team-list">
