--- a/static/css/style.css
+++ b/static/css/style.css
@@ -258,8 +258,8 @@ img {
 
 #team .team-list > ul {
   list-style: none;
-  margin: 0;
-  padding: 0;
+  margin: 0 0 0 120px;
+  padding: 0 0 0 50px;
 }
 
 #team .team-list > ul > li {
@@ -297,9 +297,9 @@ img {
 
 #team .team-list > ul > li > a > figure {
   border-radius: 50%;
-  height: 100px;
+  height: 120px;
   overflow: hidden;
-  width: 100px;
+  width: 120px;
   position: relative;
 }
 
