--- a/templates/visual.html
+++ b/templates/visual.html
@@ -12,12 +12,19 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
       charset="utf-8"
     ></script>
-
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"
+      integrity="sha512-s+xg36jbIujB2S2VKfpGmlC3T5V2TF3lY48DX7u2r9XzGzgPsa6wTpOQA7J9iffvdeBN0q9tKzRxVxw1JviZPg=="
+      crossorigin="anonymous"
+    ></script>
     <!-- <script src="{{ url_for('static',filename='js/main.js') }}"></script> -->
   </head>
   <body>
@@ -40,18 +47,74 @@
     </div>
 
     <div class="content">
-      <h1>
-        The visualiztion from notebook To be Added as A blog with description
-      </h1>
+      <h1>Visualizations</h1>
+      <div class="card col-md-6">
+        <canvas id="myChart"></canvas>
+      </div>
     </div>
-
-    <script type="text/javascript">
-      $(".txtb input").on("focus", function () {
-        $(this).addClass("focus");
-      });
-
-      $(".txtb input").on("blur", function () {
-        if ($(this).val() == "") $(this).removeClass("focus");
+    <script>
+      let myChart = document.getElementById("myChart").getContext("2d");
+      // Global Options
+      Chart.defaults.global.defaultFontFamily = "Lato";
+      Chart.defaults.global.defaultFontSize = 18;
+      Chart.defaults.global.defaultFontColor = "#777";
+      let massPopChart = new Chart(myChart, {
+        type: "bar", // bar, horizontalBar, pie, line, doughnut, radar, polarArea
+        data: {
+          labels: [
+            "Boston",
+            "Worcester",
+            "Springfield",
+            "Lowell",
+            "Cambridge",
+            "New Bedford",
+          ],
+          datasets: [
+            {
+              label: "Population",
+              data: [617594, 181045, 153060, 106519, 105162, 95072],
+              //backgroundColor:'green',
+              backgroundColor: [
+                "rgba(255, 99, 132, 0.6)",
+                "rgba(54, 162, 235, 0.6)",
+                "rgba(255, 206, 86, 0.6)",
+                "rgba(75, 192, 192, 0.6)",
+                "rgba(153, 102, 255, 0.6)",
+                "rgba(255, 159, 64, 0.6)",
+                "rgba(255, 99, 132, 0.6)",
+              ],
+              borderWidth: 1,
+              borderColor: "#777",
+              hoverBorderWidth: 3,
+              hoverBorderColor: "#000",
+            },
+          ],
+        },
+        options: {
+          title: {
+            display: true,
+            text: "Largest Cities In Massachusetts",
+            fontSize: 25,
+          },
+          legend: {
+            display: true,
+            position: "right",
+            labels: {
+              fontColor: "#000",
+            },
+          },
+          layout: {
+            padding: {
+              left: 50,
+              right: 0,
+              bottom: 0,
+              top: 0,
+            },
+          },
+          tooltips: {
+            enabled: true,
+          },
+        },
       });
     </script>
   </body>
