--- a/templates/visual.html
+++ b/templates/visual.html
@@ -4,6 +4,27 @@
     <title>Sales Prediction for Pharmaceutical Store</title>
     <!-- <link rel="stylesheet" href="../templates/css/style.css" /> -->
     <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="{{ url_for('static',filename='images/apple-touch-icon.png') }}"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="{{ url_for('static',filename='images/favicon-32x32.png') }}"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="{{ url_for('static',filename='images/favicon-16x16.png') }}"
+    />
+    <link
+      rel="manifest"
+      href="{{ url_for('static',filename='images/site.webmanifest') }}"
+    />
+    <link
       rel="stylesheet"
       type="text/css"
       href="{{ url_for('static',filename='css/style.css') }}"
