resolved deployement error with social link added to the about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -143,19 +143,21 @@
                     <div class="team-social">
                       <ul>
                         <li>
-                          <a href=""><i class="fa fa-facebook"></i></a>
+                          <a href="https://twitter.com/adeshina_rofiah"
+                            ><i class="fa fa-twitter"></i
+                          ></a>
+                        </li>
+
+                        <li>
+                          <a
+                            href="https://www.linkedin.com/in/rofiah-adeshina-a75037189/"
+                            ><i class="fa fa-linkedin"></i
+                          ></a>
                         </li>
                         <li>
-                          <a href=""><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li>
-                          <a href=""><i class="fa fa-google-plus"></i></a>
-                        </li>
-                        <li>
-                          <a href=""><i class="fa fa-linkedin"></i></a>
-                        </li>
-                        <li>
-                          <a href=""><i class="fa fa-github"></i></a>
+                          <a href="https://github.com/rofiahadeshina"
+                            ><i class="fa fa-github"></i
+                          ></a>
                         </li>
                       </ul>
                     </div>
@@ -179,20 +181,11 @@
                     <div class="team-social">
                       <ul>
                         <li>
-                          <a href="https://www.facebook.com/sami.negash.9085"
-                            ><i class="fa fa-facebook"></i
-                          ></a>
-                        </li>
-                        <li>
                           <a href="https://twitter.com/samuel_negash"
                             ><i class="fa fa-twitter"></i
                           ></a>
                         </li>
-                        <li>
-                          <a href="https://myaccount.google.com/profile"
-                            ><i class="fa fa-google-plus"></i
-                          ></a>
-                        </li>
+
                         <li>
                           <a
                             href="https://www.linkedin.com/in/samuel-negash-hailu-225756164/"
