html menifest file removed

--- a/templates/about.html
+++ b/templates/about.html
@@ -20,10 +20,10 @@
       sizes="16x16"
       href="{{ url_for('static',filename='images/favicon-16x16.png') }}"
     />
-    <link
+    <!-- <link
       rel="manifest"
       href="{{ url_for('static',filename='images/site.webmanifest') }}"
-    />
+    /> -->
     <link
       rel="stylesheet"
       type="text/css"
