social media links added for David

--- a/templates/about.html
+++ b/templates/about.html
@@ -219,19 +219,25 @@
                     <div class="team-social">
                       <ul>
                         <li>
-                          <a href=""><i class="fa fa-facebook"></i></a>
+                          <a href="https://twitter.com/_davidelvis"
+                            ><i class="fa fa-twitter"></i
+                          ></a>
                         </li>
                         <li>
-                          <a href=""><i class="fa fa-twitter"></i></a>
+                          <a href="https://komboelvis08.wixsite.com/myportfolio"
+                            ><i class="fa fa-briefcase"></i
+                          ></a>
                         </li>
                         <li>
-                          <a href=""><i class="fa fa-google-plus"></i></a>
+                          <a
+                            href="https://www.linkedin.com/in/david-elvis-a80336183/"
+                            ><i class="fa fa-linkedin"></i
+                          ></a>
                         </li>
                         <li>
-                          <a href=""><i class="fa fa-linkedin"></i></a>
-                        </li>
-                        <li>
-                          <a href=""><i class="fa fa-github-square"></i></a>
+                          <a href="https://github.com/Davidelvis"
+                            ><i class="fa fa-github-square"></i
+                          ></a>
                         </li>
                       </ul>
                     </div>
