--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
       <ul class="menu">
         <a href="/">Home</a>
         <a href="/predict">Predict</a>
-        <a href="/visual">Visualizations</a>
+        <!-- <a href="/visual">Visualizations</a> -->
         <a href="/about">About</a>
         <label for="chk" class="hide-menu-btn">
           <i class="fas fa-times"></i>
