--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,34 @@
       charset="utf-8"
     ></script>
 
-    <!-- <script src="{{ url_for('static',filename='js/main.js') }}"></script> -->
+    <style>
+      /* Tooltip container */
+      .tooltip {
+        position: relative;
+        display: inline-block;
+        border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+      }
+
+      /* Tooltip text */
+      .tooltip .tooltiptext {
+        visibility: hidden;
+        width: 120px;
+        background-color: black;
+        color: #fff;
+        text-align: center;
+        padding: 5px 0;
+        border-radius: 6px;
+
+        /* Position the tooltip text - see examples below! */
+        position: absolute;
+        z-index: 1;
+      }
+
+      /* Show the tooltip text when you mouse over the tooltip container */
+      .tooltip:hover .tooltiptext {
+        visibility: visible;
+      }
+    </style>
   </head>
   <body>
     <div class="header">
@@ -59,47 +86,29 @@
         </label>
       </ul>
     </div>
+
     <div class="content">
-      <div action="index.html" class="login-form-left">
+      <h1 style="text-align: center; padding: 20px;">
+        Prediction of Pharmaceutical Sales upto 6 Weeks a head!
+      </h1>
+      <div class="login-form-left">
         <h1>Prediction Results</h1>
+        <div>Sales Prediction for {{date}} is {{prediction}}</div>
       </div>
 
-      <form action="index.html" class="login-form">
-        <h1>Prediction of Pharmaceutical Sales upto 6 Weeks a head!</h1>
+      <form action="{{ url_for('predict')}}" method="POST" class="login-form">
+        <div class="txtb tooltip">
+          <h1>Select Date to see the its prediction</h1>
 
-        <div class="txtb">
-          <input type="text" />
-          <span data-placeholder="Weekdays"></span>
-        </div>
-        <div class="txtb">
-          <select name="preparam" id="pred">
-            <option value="">Select Pred Param</option>
-            <option value="Weekdays">Weekdays</option>
-            <option value="Weekends">Weekdays</option>
-            <option value="Days">Days</option>
-            <option value="Month">Months</option>
-          </select>
-        </div>
-        <div class="txtb">
-          <input type="text" />
-          <span data-placeholder="Days from Now"></span>
-        </div>
-        <div class="txtb">
-          <input type="text" />
-          <span data-placeholder="Weekends"></span>
+          <input type="date" id="pred_date" name="pred_date" />
+          <span class="tooltiptext"
+            >Select date from 2015-08-01 to 2015-09-17</span
+          >
         </div>
         <input type="submit" class="logbtn" value="Predict" />
       </form>
     </div>
 
-    <script type="text/javascript">
-      $(".txtb input").on("focus", function () {
-        $(this).addClass("focus");
-      });
-
-      $(".txtb input").on("blur", function () {
-        if ($(this).val() == "") $(this).removeClass("focus");
-      });
-    </script>
+    <script type="text/javascript"></script>
   </body>
 </html>
