some changes on label

--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
 
       <form action="{{ url_for('predict')}}" method="POST" class="login-form">
         <div class="txtb tooltip">
-          <h1>Select Date to see the its prediction</h1>
+          <h3>Select Date to see the Sales prediction on that date</h3>
 
           <input type="date" id="pred_date" name="pred_date" required />
           <span class="tooltiptext"
